@@ -13,7 +13,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -40,7 +39,7 @@ public class MemberService {
         return memberJpaRepository.findAll()
                 .stream()
                 .map(MemberGetResponse::of)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Transactional
